--- a/app/src/main/res/layout/item_mycart.xml
+++ b/app/src/main/res/layout/item_mycart.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="#F8F9FA"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +60,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/imgCartProductMinus"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:backgroundTint="@null"
@@ -76,6 +78,7 @@
                     android:textStyle="bold" />
 
                 <ImageView
+                    android:id="@+id/imgCartProductPlus"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:backgroundTint="@null"
@@ -96,6 +99,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/txtCartProductSize"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -107,6 +111,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/imgDeleteCartProduct"
                 android:layout_width="20dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
