--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,92 +1,87 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="30dp"
     tools:context=".NavigationBar.HomeFragment">
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:padding="16dp">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/searchEdt"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="92dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/search_background"
+            android:drawableLeft="@drawable/ic_search"
+            android:hint="Looking for shoes"
+            android:padding="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <!-- 🔍 Search -->
-            <EditText
-                android:id="@+id/searchEdt"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="50dp"
-                android:background="@drawable/search_background"
-                android:drawableLeft="@drawable/ic_search"
-                android:drawablePadding="8dp"
-                android:hint="Looking for shoes"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:textColor="@android:color/black"
-                android:textColorHint="#888888"
-                android:focusable="false"
-                android:clickable="true"
-                />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewCategory"
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="20dp"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/searchEdt" />
+
+        <include
+            android:id="@+id/popularShoesHeader"
+            layout="@layout/popularshoes_seeall"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recyclerViewCategory" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewProduct"
+            android:layout_width="375dp"
+            android:layout_height="235dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="67dp"
+            app:layout_constraintBottom_toTopOf="@+id/recyclerViewProductNewArrivals"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/popularShoesHeader" />
+
+        <include
+            android:id="@+id/newArrivalsHeader"
+            layout="@layout/newarrivals_seeall"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recyclerViewProduct" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewProductNewArrivals"
+            android:layout_width="376dp"
+            android:layout_height="133dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newArrivalsHeader" />
 
 
-
-
-            <!-- 📂 Category -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewCategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:overScrollMode="never"
-                android:nestedScrollingEnabled="false" />
-
-            <!-- ⭐ Popular Shoes Header -->
-            <include
-                android:id="@+id/popularShoesHeader"
-                layout="@layout/popularshoes_seeall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp" />
-
-            <!-- 👟 Popular Shoes List -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerPopularShoes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="160dp"
-                android:nestedScrollingEnabled="false"
-                android:overScrollMode="never"
-                android:layout_marginTop="8dp" />
-
-            <!-- 🛒 Product Grid -->
-
-
-            <!-- ✨ New Arrivals Header -->
-            <include
-                android:id="@+id/newArrivalsHeader"
-                layout="@layout/newarrivals_seeall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp" />
-
-            <!-- 🆕 New Arrivals List -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewProductNewArrivals"
-                android:layout_marginTop="15dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="160dp"
-                android:layout_marginBottom="50dp"
-                android:nestedScrollingEnabled="false"
-                android:overScrollMode="never" />
-
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
