--- a/app/src/main/res/layout/filter_bottom_sheet.xml
+++ b/app/src/main/res/layout/filter_bottom_sheet.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_filter_rounded_container"
     android:fillViewport="true">
 
@@ -44,20 +45,20 @@
             android:layout_marginTop="8dp"
             android:gravity="center">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 style="@style/FilterButton"
                 android:id="@+id/btnMen"
                 android:layout_weight="1"
                 android:text="Men" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 style="@style/FilterButton"
                 android:id="@+id/btnWomen"
                 android:layout_weight="1"
                 android:text="Women"
                 android:layout_marginStart="8dp" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 style="@style/FilterButton"
                 android:id="@+id/btnUnisex"
                 android:layout_weight="1"
@@ -74,69 +75,66 @@
             android:textSize="16sp"
             android:layout_marginTop="16dp" />
 
-        <LinearLayout
+        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
             android:layout_marginTop="8dp"
-            android:weightSum="6">
-
-            <Button
-                style="@style/FilterButton"
-                android:layout_margin="2dp"
-                android:id="@+id/btn38"
-                android:layout_width="0dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingVertical="12dp"
+                android:gravity="center">
 
-                android:layout_weight="1"
-                android:text="38" />
+                <androidx.appcompat.widget.AppCompatButton
+                    style="@style/FilterButton"
+                    android:layout_margin="2dp"
+                    android:id="@+id/btn38"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="38" />
 
-            <Button
-                style="@style/FilterButton"
-                android:layout_margin="2dp"
-                android:id="@+id/btn39"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="39" />
+                <androidx.appcompat.widget.AppCompatButton
+                    style="@style/FilterButton"
+                    android:layout_margin="2dp"
+                    android:id="@+id/btn39"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="39" />
 
-            <Button
-                style="@style/FilterButton"
-                android:layout_margin="2dp"
-                android:id="@+id/btn40"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="40" />
+                <androidx.appcompat.widget.AppCompatButton
+                    style="@style/FilterButton"
+                    android:layout_margin="2dp"
+                    android:id="@+id/btn40"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="40" />
 
-            <Button
-                style="@style/FilterButton"
-                android:id="@+id/btn41"
-                android:layout_margin="2dp"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="41" />
+                <androidx.appcompat.widget.AppCompatButton
+                    style="@style/FilterButton"
+                    android:id="@+id/btn41"
+                    android:layout_margin="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="41" />
 
-            <Button
-                style="@style/FilterButton"
-                android:id="@+id/btn42"
-                android:layout_margin="2dp"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="42" />
+                <androidx.appcompat.widget.AppCompatButton
+                    style="@style/FilterButton"
+                    android:id="@+id/btn42"
+                    android:layout_margin="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="42" />
 
-            <Button
-                style="@style/FilterButton"
-                android:id="@+id/btn43"
-                android:layout_margin="2dp"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="43" />
-        </LinearLayout>
+                <androidx.appcompat.widget.AppCompatButton
+                    style="@style/FilterButton"
+                    android:id="@+id/btn43"
+                    android:layout_margin="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="43" />
+            </LinearLayout>
+        </HorizontalScrollView>
 
 
         <!-- Price -->
@@ -148,10 +146,15 @@
             android:textSize="16sp"
             android:layout_marginTop="16dp" />
 
-        <SeekBar
+        <com.google.android.material.slider.RangeSlider
             android:id="@+id/priceSlider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:valueFrom="0.0"
+            app:labelBehavior = "gone"
+            android:valueTo="100.0"
+            app:values="@array/initial_slider_values"
+            android:stepSize="0.01"
             android:layout_marginTop="8dp" />
 
         <LinearLayout
@@ -166,7 +169,7 @@
                 android:id="@+id/txtMinPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$16"
+                android:text="0"
                 android:textColor="#777777" />
 
             <View
@@ -178,12 +181,12 @@
                 android:id="@+id/txtMaxPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$1000"
+                android:text="5.000.000"
                 android:textColor="#777777" />
         </LinearLayout>
 
-        <!-- Apply Button -->
-        <Button
+        <!-- Apply androidx.appcompat.widget.AppCompatButton -->
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnApplyFilter"
             style="@style/FilterButton"
             android:layout_width="match_parent"
