--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -8,11 +8,11 @@
 
     <ImageView
         android:id="@+id/ivIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="wrap_content"
+        android:visibility="invisible"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
-        android:src="@drawable/ic_history"
-        android:contentDescription="History Icon" />
+        android:src="@drawable/ic_history" />
 
     <TextView
         android:id="@+id/tvText"
