--- a/app/src/main/res/layout/activity_see_all_shoes.xml
+++ b/app/src/main/res/layout/activity_see_all_shoes.xml
@@ -37,6 +37,12 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:src="@drawable/ic_filter" />
+        <ImageView
+            android:id="@+id/seacrch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:src="@drawable/ic_search" />
 
     </LinearLayout>
 
