--- a/app/src/main/res/drawable/custom_product.xml
+++ b/app/src/main/res/drawable/custom_product.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Bo góc -->
     <corners android:radius="20dp" />
+
+    <!-- Nền trắng -->
     <solid android:color="@android:color/white"/>
 
+    <!-- Viền xám nhạt -->
+    <stroke
+        android:width="1dp"
+        android:color="#DDDDDD" /> <!-- mã màu xám nhạt -->
 </shape>
